Added MyTenant page

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,7 @@ h6 {
   text-align: center;
   text-transform: uppercase;
   margin: 2rem 0;
+  margin-top: 5rem;
 }
 .empty-search {
   text-align: center;
@@ -90,7 +91,8 @@ h6 {
 /* Navbar */
 
 .saleLogo {
-  width: 45px;
+  width: 30px;
+  height: 38.4px;
 }
 .navbar {
   position: fixed;
@@ -541,7 +543,7 @@ h6 {
 }
 .size-input {
   width: 40%;
-  padding: 0.2rem;
+  padding: 0.3rem;
   border: 1px solid var(--mainBlack);
   border-radius: 0.3rem;
   margin-right: 0.3rem;
@@ -564,3 +566,70 @@ h6 {
 }
 
 /* end of rooms fitler*/
+
+.accordion-wrapper input {
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+}
+.accordion-wrapper {
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 4px 4px -2px rgba(0, 0, 0, 0.5);
+  width: 600px;
+  margin: 0 auto;
+}
+.accordion {
+  width: 100%;
+  color: white;
+  overflow: hidden;
+  margin-bottom: 16px;
+}
+.accordion:last-child {
+  margin-bottom: 0;
+}
+.accordion-label {
+  display: flex;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  padding: 16px;
+  background: rgba(4, 57, 94, 0.8);
+  font-weight: bold;
+  cursor: pointer;
+  font-size: 20px;
+}
+.accordion-label:hover {
+  background: rgba(4, 57, 94, 1);
+}
+.accordion-label::after {
+  content: "\276F";
+  width: 16px;
+  height: 16px;
+  text-align: center;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.accordion-content {
+  max-height: 0;
+  padding: 0 16px;
+  color: rgba(4, 57, 94, 1);
+  background: white;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.accordion-content p {
+  margin: 0;
+  color: rgba(4, 57, 94, 0.7);
+  font-size: 18px;
+}
+input:checked + .accordion-label {
+  background: rgba(4, 57, 94, 1);
+}
+input:checked + .accordion-label::after {
+  -webkit-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
+input:checked ~ .accordion-content {
+  max-height: 100vh;
+  padding: 16px;
+}
