--- a/src/App.css
+++ b/src/App.css
@@ -289,7 +289,7 @@ h6 {
   padding: 5rem 0;
 }
 .services {
-  background: var(--darkGrey);
+  background: var(--offWhite);
   text-align: center;
 }
 .services-center {
