--- a/src/css/App.css
+++ b/src/css/App.css
@@ -17,7 +17,6 @@
 }
 /* globals */
 body {
-  padding-top: 66px;
   color: var(--mainBlack);
   background: var(--mainWhite);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -89,6 +88,7 @@ h6 {
   margin-top: 3rem;
 }
 .error {
+  padding-top: 66px;
   text-align: center;
   text-transform: uppercase;
   margin: 2rem 0;
@@ -229,13 +229,13 @@ h6 {
 .defaultHero,
 .roomsHero {
   min-height: calc(100vh - 66px);
-  background: url("./images/defaultBcg.jpg") center/cover no-repeat;
+  background: url("../images/defaultBcg.jpg") center/cover no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .roomsHero {
-  background-image: url("./images/house-2.jpg");
+  background-image: url("../images/house-2.jpg");
   min-height: 60vh;
 }
 /* End of Hero */
@@ -431,7 +431,9 @@ h6 {
 }
 /* end of house  */
 /* single house*/
-
+.list {
+  padding: 8rem 0 0 0;
+}
 .single-house {
   padding: 5rem 0 0 0;
 }
