--- a/src/css/LogIn.css
+++ b/src/css/LogIn.css
@@ -6,15 +6,13 @@ input {
 }
 
 .container {
-  position: relative;
-  width: 100%;
   /*background: url(../images/vancouverdowntown.png) no-repeat center; */
-  background-color: rgb(245, 236, 236);
-  min-height: 100vh;
+  /* min-height: 100vh; */
   overflow: hidden;
 }
 
 .forms-container {
+  background-color: rgb(219, 242, 253);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -134,7 +132,7 @@ form.sign-in-form {
   outline: none;
   height: 49px;
   border-radius: 49px;
-  color: #fff;
+  color: rgba(4, 57, 94, 1);
   text-transform: uppercase;
   font-weight: 600;
   margin: 10px 0;
@@ -164,7 +162,7 @@ form.sign-in-form {
   top: -10%;
   right: 48%;
   transform: translateY(-50%);
-  background: url(./images/home-3.jpg);
+  background: url(../images/defaultBcg.jpg);
   /*background-image: linear-gradient(-45deg, #f1f5fc 0%, #d44747 100%);*/
   transition: 1.8s ease-in-out;
   border-radius: 50%;
@@ -197,9 +195,10 @@ form.sign-in-form {
 }
 
 .panel .content {
-  color: #fff;
+  color: rgba(4, 57, 94, 1);
   transition: transform 0.9s ease-in-out;
   transition-delay: 0.6s;
+  margin-bottom: 10rem;
 }
 
 .panel h3 {
@@ -216,7 +215,7 @@ form.sign-in-form {
 .btn.transparent {
   margin: 0;
   background: none;
-  border: 2px solid #fff;
+  border: 2px solid rgba(4, 57, 94, 1);
   width: 130px;
   height: 41px;
   font-weight: 600;
