--- a/src/css/App.css
+++ b/src/css/App.css
@@ -573,6 +573,7 @@ h6 {
   margin-bottom: 0;
 }
 .accordion-label {
+  text-transform: capitalize;
   display: flex;
   -webkit-box-pack: justify;
   justify-content: space-between;
